manifests/storage/docker-registry/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-registry
  labels:
    app: docker-registry
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: docker-registry
  template:
    metadata:
      labels:
        app: docker-registry
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/path: /metrics
        prometheus.io/port: '8080'
    spec:
      containers:
      - name: docker-registry
        image: registry:latest
        volumeMounts:
          - mountPath: /auth/htpasswd
            name: htpasswd
            subPath: htpasswd
          - mountPath: /var/lib/registry
            name: images
        readinessProbe:
          tcpSocket:
            port: 5000
        resources:
          limits:
            memory: 1Gi
      volumes:
        - name: htpasswd
          secret:
            secretName: docker-registry
        - name: images
          persistentVolumeClaim:
            claimName: docker-registry
