manifests/storage/docker-registry/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docker-registry
  labels:
    app: docker-registry
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 5000
    protocol: TCP
  selector:
    app: docker-registry
