manifests/storage/docker-registry/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: cloudflare
spec:
  tls:
  - hosts:
    - registry.homelab.dsb.dev
    secretName: registry-tls
  rules:
  - host: registry.homelab.dsb.dev
    http:
      paths:
      - backend:
          service:
            name: docker-registry
            port:
              number: 5000
        path: /
        pathType: Prefix
